# trendTracker

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  cliff.toml  docker-compose.yml  skills-lock.json
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 08cd4325aaa8_002_add_signal_logs.py  a1b2c3d4e5f6_004_add_deep_analysis_fields.py  afb7ca186578_001_initial_schema.py  e770506d9786_003_add_trend_relevance_fields.py
backend/app/: config.py  database.py  main.py
backend/app/ai/: __init__.py  base.py  factory.py  minimax_provider.py
backend/app/collectors/: __init__.py  base.py  dailyhot.py  google.py  google_mock.py  registry.py  tiktok.py  tiktok_mock.py  weibo.py  weibo_mock.py
backend/app/models/: __init__.py  ai_insight.py  alert_log.py  collector_log.py  daily_brief.py  keyword.py  keyword_alert.py  platform.py  signal_log.py  trend.py
backend/app/routers/: ai.py  alerts.py  collector.py  scheduler.py  signals.py  system.py  trends.py
backend/app/schemas/: ai.py  alerts.py  collector.py  signals.py  trends.py
backend/app/search/: __init__.py  base.py  bing.py  duckduckgo.py  factory.py  google.py
backend/app/services/: ai.py  (+10 more)
backend/tests/: conftest.py  test_ai.py  test_alerts.py  test_brief.py  test_collectors.py  test_convergence.py  test_dailyhot.py  test_deep_analysis.py  test_google_collector.py  test_heatmap.py  test_models.py  test_relevance.py  test_routers.py  test_scheduler.py  test_search.py  test_signals.py  test_tiktok_collector.py  test_velocity.py  test_weibo_collector.py
(+36 files in other folders)
